--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     </video>
     <h2 class="header--secondary">Your personal travel guide</h2>
     <h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interest around you.</h4>
+    <p><image src="resources/images/camp.jpeg"></p>
+    <p><image src="resources/images/phone.png"></image></p>
 </body>
 </html>
