--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interest around you.</h4>
     <p><image src="resources/images/camp.jpeg"></p>
     <p><image src="resources/images/phone.png"></image></p>
+    <h4 class="header--sub-header">Coming Soon for iPhone and Android</h4>
+    <p> <a class="link--cta" href="#">Download Excurions (Coming Soon!)</a></p>
 </body>
 </html>
