--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <p><image src="resources/images/phone.png"></image></p>
     <h4 class="header--sub-header">Coming Soon for iPhone and Android</h4>
     <p> <a class="link--cta" href="#">Download Excurions (Coming Soon!)</a></p>
+    <p class="footer--copyright">© Excursion</p>
 </body>
 </html>
